# opaprikkie-simulator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: check-pre-commit.yml  check-versioning.yml  ci.yml
notebooks/: test_game.ipynb
scripts/: make.ps1
src/opaprikkie_sim/: __init__.py  board.py  cli.py  constants.py  dice.py  display.py  game.py  game_stats.py  strategy.py  utilities.py
src/opaprikkie_sim/examples/: basic_game.py  enhanced_stats_demo.py
src/opaprikkie_sim/foo/: bla.py
tests/: test_basic_game.py  test_game_stats.py  test_logging_display.py  test_reproducibility.py  test_things.py
tests/foo/: test_bla.py
tests/integration/: test_basic_game.py  test_cli.py  test_module_cli.py
tests/unit/: test_board.py  test_cli.py  test_dice.py  test_strategy.py
